--- a/app/src/main/res/layout/appwidget_provider_layout.xml
+++ b/app/src/main/res/layout/appwidget_provider_layout.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#09C"
-    android:padding="@dimen/widget_margin">
+    >
 
     <TextView
         android:id="@+id/appwidget_text"
@@ -11,12 +11,11 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_margin="8dp"
         android:background="#09C"
         android:contentDescription="@string/appwidget_text"
         android:text="@string/appwidget_text"
         android:textColor="#ffffff"
-        android:textSize="24sp"
+        android:textSize="15dp"
         android:textStyle="bold|italic"/>
 
 </RelativeLayout>
