--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -21,11 +21,12 @@
             android:textSize="18sp" />
 
         <TextView
+            android:id="@+id/info_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:text="@string/info_mail"
+            android:layout_height="471dp"
+            android:text="@string/info"
             android:textColor="@color/black"
+            android:scrollbars="vertical"
             android:textSize="18sp" />
     </LinearLayout>
 </LinearLayout>
